Changed styling for weather. Fixed issue on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,7 @@ header h2 {
     color: white;
     text-align: center;
     font-size: 32px;
+    margin-right: 45px;
 }
 
 header #openbtn {
@@ -72,12 +73,7 @@ header #openbtn {
 }
 
 .location {
-    position: fixed;
-    z-index: 1;
-    color: #FF715B;
-    right: 1px;
-    margin-right: 20px;
-    margin-top: 6px;
+    color: white;
 }
 
 .notification {
@@ -108,7 +104,7 @@ header #openbtn {
 
 main>section {
     padding: 20px;
-    margin-top: 90px;
+    margin-top: 120px;
     background: white;
 }
 
@@ -197,12 +193,29 @@ footer {
 }
 
 @media only screen and (min-width: 600px){
+    header h2 {
+        margin-right: 0;
+    }
+
     #page-container>main {
         width: 100%;
     }
 
+    main>section {
+        margin-top: 90px;
+    }
+
     .metropolia, .laurea, .helia {
         flex: 40%;
+    }
+
+    .location {
+        position: fixed;
+        z-index: 1;
+        right: 1px;
+        margin-right: 20px;
+        margin-top: 6px;
+        top: 0;
     }
 
     aside {
